--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.2.0",
+    "dotenv": "^16.3.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "daisyui": "^3.8.2"
   }
 }
