--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.2.0",
     "dotenv": "^16.3.1",
+    "flag-icons": "^6.12.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
