--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portifoly-v2",
   "type": "module",
-  "version": "1.0.1",
+  "version": "1.1.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
+    "@iconify-json/fa": "^1.1.8",
+    "@iconify-json/fa-brands": "^1.1.8",
     "astro": "^3.2.0",
+    "astro-icon": "^1.1.0",
     "dotenv": "^16.3.1",
     "flag-icons": "^6.12.0",
     "tailwindcss": "^3.3.3"
